# spotify-app

./: .gitignore  creds.example.env  pyproject.toml
spofify_integration/: manage.py
spofify_integration/spofify_integration/: admin.py  asgi.py  forms.py  models.py  services.py  settings.py  urls.py  views.py  wsgi.py
spofify_integration/spofify_integration/migrations/: 0001_initial.py  0002_genre_artist_artist_id_alter_artist_name_and_more.py  0003_album_album_id.py
spofify_integration/spofify_integration/templates/spotify_integration/: album_detail.html  albums.html  artist_details.html  artists.html  base.html  fetch_all_songs_from_an_artist.html  fetch_artist_albums_form.html  fetch_artist_form.html  fetch_track_artist_form.html  home.html  song_details.html  songs.html
